--- a/packages/cascadeselect/package.json
+++ b/packages/cascadeselect/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^2.1.0",
-    "vue-resource": "^0.7.0"
+    "vue-resource": "^0.7.0",
+    "mockjs": "^1.0.1-beta3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
