--- a/packages/cascadeselect/package.json
+++ b/packages/cascadeselect/package.json
@@ -1,10 +1,14 @@
 {
   "name": "vue-cascade",
-  "version": "1.0.2",
-  "main": "dist/vue-cascade.common.js",
+  "version": "1.0.5",
+  "main": "dist/vue-cascade.js",
   "description": "A Vue component of cascading select",
   "author": "haokuan <jingdaohao@gmail.com>",
   "private": false,
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
@@ -75,6 +79,9 @@
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
+    "uglify-js": "^2.7.5",
+    "rollup": "^0.41.4",
+    "rollup-plugin-buble": "^0.15.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
